--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
         .tabs {
             display: flex;
-            padding: 6px 10px 0;
+            padding: 6px 10px 7px;
             gap: 6px;
             border-bottom: 1px solid var(--border-subtle);
             background: #f3f4f6;
@@ -206,6 +206,7 @@
             overflow: hidden;
             position: relative;
             max-width: 100%;
+            margin-top: 16px;
         }
 
         .slides {
@@ -218,12 +219,13 @@
             min-width: 100%;
             flex-shrink: 0;
             max-width: 100%;
+            padding-top: 24px;
         }
 
         .accordion {
-            padding: 10px 12px 14px; /* baja un pelín el padding lateral */
+            padding: 12px 12px 14px;
             max-width: 100%;
-            overflow-x: hidden;      /* 👈 por si algún hijo se pasa de listo */
+            overflow-x: hidden;
         }
 
         .accordion-item {
@@ -239,6 +241,11 @@
             border-color: rgba(37,99,235,0.85);
             box-shadow: 0 10px 20px rgba(15,23,42,0.15);
             transform: translateY(-1px);
+        },
+
+
+        .accordion-item.has-filter-match .accordion-header {
+            background: #ecfdf5;
         }
 
         .accordion-header {
@@ -619,6 +626,47 @@
             font-size: 11px;
         }
 
+        .nearby-filter-row {
+            display: flex;
+            gap: 6px;
+            align-items: center;
+        }
+
+        .nearby-filter-btn {
+            border: none;
+            border-radius: 999px;
+            padding: 6px 10px;
+            font-size: 11px;
+            font-weight: 600;
+            background: #2563eb;
+            color: #fff;
+            cursor: pointer;
+            white-space: nowrap;
+        }
+
+        .nearby-filter-btn:hover {
+            background: #1d4ed8;
+        }
+
+        .nearby-filter-btn:active {
+            transform: translateY(1px);
+        }
+
+        .nearby-filter-clear {
+            margin-top: 4px;
+            border: none;
+            background: transparent;
+            font-size: 11px;
+            color: #6b7280;
+            cursor: pointer;
+            padding: 0;
+            text-decoration: underline;
+        }
+
+        .nearby-filter-clear:hover {
+            color: #4b5563;
+        }
+
         .nearby-filter label {
             color: var(--muted);
         }
@@ -634,6 +682,13 @@
         .nearby-line-input:focus {
             border-color: #2563eb;
             box-shadow: 0 0 0 1px rgba(37,99,235,0.35);
+        }
+
+        .nearby-filter-message {
+            margin-top: 4px;
+            font-size: 11px;
+            color: #b91c1c;   /* rojo suave */
+            min-height: 14px; /* mantiene el sitio aunque esté vacío */
         }
 
         @media (max-width: 480px) {
@@ -784,12 +839,12 @@
                     <div id="dynamic-stops"></div>
                 </section>
 
-                <!-- Slide 2: Paradas cercanas (Top 34 + filtro) -->
+                <!-- Slide 2: Paradas cercanas (Top 10 + filtro) -->
                 <section class="slide accordion" data-slide="2">
                     <section class="nearby-section">
                         <div class="nearby-title">
                             Paradas cercanas
-                            <span class="nearby-badge">Top 34</span>
+                            <span class="nearby-badge">Top 10</span>
                         </div>
                         <div class="nearby-status" id="nearby-status">
                             Usa el botón de refrescar para buscar paradas cerca de ti.
@@ -798,13 +853,22 @@
                         <!-- Filtro por línea -->
                         <div class="nearby-filter">
                             <label for="nearby-line-input">Filtrar paradas cercanas por línea (opcional)</label>
-                            <input
-                                    id="nearby-line-input"
-                                    class="nearby-line-input"
-                                    type="text"
-                                    inputmode="numeric"
-                                    placeholder="Ej: 66, 137..."
-                            />
+                            <div class="nearby-filter-row">
+                                <input
+                                        id="nearby-line-input"
+                                        class="nearby-line-input"
+                                        type="text"
+                                        inputmode="numeric"
+                                        placeholder="Ej: 66, 137..."
+                                />
+                                <button type="button" id="nearby-apply" class="nearby-filter-btn">
+                                    Aplicar
+                                </button>
+                            </div>
+                            <button type="button" id="nearby-clear" class="nearby-filter-clear">
+                                Quitar filtro
+                            </button>
+                            <div id="nearby-filter-message" class="nearby-filter-message"></div>
                         </div>
 
                         <div id="nearby-accordion"></div>
@@ -832,6 +896,8 @@
 
     let userLocation = null;
 
+    let nearbyLineFilter = "";
+
     // Paradas fijas + dinámicas
     const STOPS = [
         { id: 3224, label: "Herrera Oria - Labastida (TRABAJO) - Parada 3224" },
@@ -853,6 +919,9 @@
     const myLineInput = document.getElementById("my-line-input");
     const nearbyLineInput = document.getElementById("nearby-line-input");
 
+    const nearbyApplyBtn = document.getElementById("nearby-apply");
+    const nearbyClearBtn = document.getElementById("nearby-clear");
+
     // --- Slider tabs ---
     const tabs = document.querySelectorAll(".tab-btn");
     const slidesContainer = document.getElementById("slides");
@@ -873,10 +942,55 @@
         });
     });
 
-    // --- Helpers líneas ---
+    // --- Swipe táctil en el slider ---
+    const sliderEl = document.querySelector(".slider");
+    let touchStartX = 0;
+    let touchEndX = 0;
+    let isSwiping = false;
+    const SWIPE_THRESHOLD = 50; // píxeles mínimos para considerar swipe
+
+    if (sliderEl) {
+        sliderEl.addEventListener("touchstart", (e) => {
+            if (!e.touches || e.touches.length === 0) return;
+            isSwiping = true;
+            touchStartX = e.touches[0].clientX;
+            touchEndX = touchStartX;
+        }, { passive: true });
+
+        sliderEl.addEventListener("touchmove", (e) => {
+            if (!isSwiping || !e.touches || e.touches.length === 0) return;
+            touchEndX = e.touches[0].clientX;
+            // aquí podríamos hacer “drag” visual si quisiéramos
+        }, { passive: true });
+
+        sliderEl.addEventListener("touchend", () => {
+            if (!isSwiping) return;
+            isSwiping = false;
+
+            const deltaX = touchEndX - touchStartX;
+
+            // swipe a la derecha → slide anterior
+            if (deltaX > SWIPE_THRESHOLD) {
+                const prev = Math.max(0, currentSlideIndex - 1);
+                if (prev !== currentSlideIndex) {
+                    setSlide(prev);
+                }
+            }
+
+            // swipe a la izquierda → siguiente slide
+            if (deltaX < -SWIPE_THRESHOLD) {
+                const next = Math.min(tabs.length - 1, currentSlideIndex + 1);
+                if (next !== currentSlideIndex) {
+                    setSlide(next);
+                }
+            }
+        });
+    }
+
     function normalizeLine(l) {
-        if (l == null) return null;
-        return String(l).trim().replace(/^0+/, "") || "0";
+        if (l == null) return "";
+        const cleaned = String(l).trim().replace(/^0+/, "");
+        return cleaned; // "" si no hay nada
     }
 
     function getStopLinesFromRawStop(rawStop) {
@@ -1179,7 +1293,8 @@
 
     // ---- RENDER PARADA INDIVIDUAL ----
     function renderStop(stopConfig, arrivals) {
-        const { id, filterLines } = stopConfig;
+        const { id, filterLines } = stopConfig;   // 👈 quitamos fromNearby
+
         const listEl = document.getElementById(`buses-${id}`);
         const statusWrapper = document.getElementById(`status-${id}`);
         const reachEl = document.getElementById(`reach-${id}`);
@@ -1192,6 +1307,7 @@
         if (walkEl) walkEl.textContent = "";
         listEl.innerHTML = "";
 
+        // Filtrado por líneas (favoritas, mis paradas y cercanas usan esto)
         let filtered = arrivals;
         if (filterLines && filterLines.length) {
             filtered = arrivals.filter(a =>
@@ -1199,6 +1315,7 @@
             );
         }
 
+        // Próximo bus
         let nextBusMinutes = null;
         filtered.forEach(arr => {
             if (arr.estimateArrive != null) {
@@ -1220,10 +1337,20 @@
         if (!filtered.length) {
             const li = document.createElement("li");
             li.className = "empty";
-            li.textContent = "No hay buses previstos ahora mismo.";
+
+            if (filterLines && filterLines.length) {
+                // 👇 Caso: hay filtro y no hay ningún bus que lo cumpla
+                li.textContent = "No hay buses de esa línea en esta parada ahora mismo.";
+                statusWrapper.classList.remove("error");
+                if (statusText) statusText.textContent = "Sin buses de la línea filtrada.";
+            } else {
+                // 👇 Caso general sin filtro
+                li.textContent = "No hay buses previstos ahora mismo.";
+                statusWrapper.classList.remove("error");
+                if (statusText) statusText.textContent = "Sin previsiones ahora mismo.";
+            }
+
             listEl.appendChild(li);
-            statusWrapper.classList.remove("error");
-            if (statusText) statusText.textContent = "Sin previsiones ahora mismo.";
             return;
         }
 
@@ -1259,11 +1386,11 @@
                 const textBlock = document.createElement("div");
                 textBlock.className = "bus-text";
                 textBlock.innerHTML = `
-                    <div class="bus-main">${arr.destination || "Destino no disponible"}</div>
-                    <div class="bus-sub">
-                        Distancia aprox bus-parada: ${arr.DistanceBus != null ? arr.DistanceBus + " m" : "-"}
-                    </div>
-                `;
+					<div class="bus-main">${arr.destination || "Destino no disponible"}</div>
+					<div class="bus-sub">
+						Distancia aprox bus-parada: ${arr.DistanceBus != null ? arr.DistanceBus + " m" : "-"}
+					</div>
+				`;
 
                 left.appendChild(lineBadge);
                 left.appendChild(textBlock);
@@ -1307,6 +1434,8 @@
             });
     }
 
+
+
     async function refreshStop(stopConfig) {
         const statusWrapper = document.getElementById(`status-${stopConfig.id}`);
         const statusText = statusWrapper?.querySelector("span:nth-child(2)");
@@ -1328,8 +1457,18 @@
     }
 
     // ---- RENDER PARADAS CERCANAS COMO ACORDEONES ----
-    async function renderNearbyStops(stops, filterLine) {
+    async function renderNearbyStops(stops) {
         if (!nearbyAccordionEl) return;
+
+        // 1. Guardamos qué paradas estaban abiertas ANTES de refrescar
+        const prevOpenIds = new Set();
+        const prevItems = nearbyAccordionEl.querySelectorAll(".accordion-item.open");
+        prevItems.forEach(item => {
+            const id = item.dataset.stopId;
+            if (id) prevOpenIds.add(String(id));
+        });
+
+        // 2. Borramos el contenido para reconstruir
         nearbyAccordionEl.innerHTML = "";
 
         if (!stops || !stops.length) {
@@ -1341,7 +1480,6 @@
         }
 
         const baseIds = new Set(STOPS.map(s => String(s.id)));
-        const normalizedFilter = filterLine ? normalizeLine(filterLine) : "";
 
         const filtered = stops
             .map(stop => {
@@ -1352,23 +1490,14 @@
                     stop.id ??
                     stop.stopNum ??
                     null;
-
-                const lines = getStopLinesFromRawStop(stop);
-
-                return { raw: stop, stopId, lines };
+                return { raw: stop, stopId };
             })
-            .filter(s => s.stopId != null && !baseIds.has(String(s.stopId)))
-            .filter(s => {
-                if (!normalizedFilter) return true;
-                return s.lines.some(l => l === normalizedFilter);
-            });
+            .filter(s => s.stopId != null && !baseIds.has(String(s.stopId)));
 
         if (!filtered.length) {
             const div = document.createElement("div");
             div.className = "empty";
-            div.textContent = normalizedFilter
-                ? `No hay paradas cercanas donde pase la línea ${normalizedFilter}.`
-                : "Las paradas cercanas ya están entre tus paradas favoritas o añadidas.";
+            div.textContent = "Las paradas cercanas ya están entre tus paradas favoritas o añadidas.";
             nearbyAccordionEl.appendChild(div);
             return;
         }
@@ -1396,25 +1525,31 @@
             const article = document.createElement("article");
             article.className = "accordion-item";
             article.dataset.stopId = String(idNum);
+
+            // 3. Si antes estaba abierta, la dejamos abierta al reconstruir
+            if (prevOpenIds.has(String(idNum))) {
+                article.classList.add("open");
+            }
+
             article.innerHTML = `
-                <button class="accordion-header">
-                  <div class="accordion-header-main">
-                    <div class="stop-name">${name}</div>
-                    <div class="stop-subtitle">Parada ${idNum} · Cercana a tu ubicación</div>
-                  </div>
-                  <span class="badge">${idNum}</span>
-                </button>
-                <div class="accordion-panel">
-                  <div class="walk-time" id="walk-${idNum}"></div>
-                  <div class="reach-time" id="reach-${idNum}"></div>
-                  <div id="location-${idNum}" class="location-link-container"></div>
-                  <div class="status" id="status-${idNum}">
-                    <span class="status-dot"></span>
-                    <span>Cargando…</span>
-                  </div>
-                  <ul class="bus-list" id="buses-${idNum}"></ul>
-                </div>
-            `;
+				<button class="accordion-header">
+				  <div class="accordion-header-main">
+					<div class="stop-name">${name}</div>
+					<div class="stop-subtitle">Parada ${idNum} · Cercana a tu ubicación</div>
+				  </div>
+				  <span class="badge">${idNum}</span>
+				</button>
+				<div class="accordion-panel">
+				  <div class="walk-time" id="walk-${idNum}"></div>
+				  <div class="reach-time" id="reach-${idNum}"></div>
+				  <div id="location-${idNum}" class="location-link-container"></div>
+				  <div class="status" id="status-${idNum}">
+					<span class="status-dot"></span>
+					<span>Cargando…</span>
+				  </div>
+				  <ul class="bus-list" id="buses-${idNum}"></ul>
+				</div>
+			`;
 
             nearbyAccordionEl.appendChild(article);
 
@@ -1425,7 +1560,11 @@
 
             updateLocationLink(idNum);
 
-            stopConfigs.push({ id: idNum });
+            const cfg = { id: idNum, fromNearby: true };
+            if (nearbyLineFilter) {
+                cfg.filterLines = [nearbyLineFilter];
+            }
+            stopConfigs.push(cfg);
         }
 
         await Promise.all(stopConfigs.map(cfg => refreshStop(cfg)));
@@ -1447,9 +1586,7 @@
             const stops = await getNearbyStops();
             nearbyStopsCache = stops;
 
-            const currentFilter = nearbyLineInput ? nearbyLineInput.value.trim() : "";
-
-            await renderNearbyStops(stops, currentFilter);
+            await renderNearbyStops(stops);
             nearbyStatusEl.textContent = "Mostrando las paradas cercanas a tu ubicación.";
         } catch (err) {
             console.error(err);
@@ -1612,10 +1749,56 @@
         });
     }
 
-    if (nearbyLineInput) {
-        nearbyLineInput.addEventListener("input", () => {
-            const val = nearbyLineInput.value.trim();
-            renderNearbyStops(nearbyStopsCache, val);
+    // Aplicar / quitar filtro de paradas cercanas
+    if (nearbyApplyBtn && nearbyLineInput) {
+        const msgEl = document.getElementById("nearby-filter-message");
+
+        nearbyApplyBtn.addEventListener("click", () => {
+            const raw = nearbyLineInput.value.trim();
+
+            // Si input vacío → quitar filtro
+            if (!raw) {
+                nearbyLineFilter = "";
+                msgEl.textContent = "";
+                renderNearbyStops(nearbyStopsCache);
+                return;
+            }
+
+            // Normalizar filtro
+            nearbyLineFilter = normalizeLine(raw);
+
+            // Renderizamos con filtro aplicado
+            renderNearbyStops(nearbyStopsCache).then(() => {
+
+                // Comprobar si alguna parada tiene buses tras el filtrado
+                let anyMatch = false;
+                document.querySelectorAll("#nearby-accordion .bus-list").forEach(list => {
+                    // Si el primer elemento NO es "empty", hay buses reales
+                    if (
+                        list.children.length &&
+                        !list.children[0].classList.contains("empty")
+                    ) {
+                        anyMatch = true;
+                    }
+                });
+
+                if (!anyMatch) {
+                    msgEl.textContent =
+                        "No hay paradas cercanas con buses de esa línea ahora mismo.";
+                } else {
+                    msgEl.textContent = "";
+                }
+            });
+        });
+    }
+
+
+    if (nearbyClearBtn && nearbyLineInput) {
+        nearbyClearBtn.addEventListener("click", () => {
+            nearbyLineInput.value = "";
+            nearbyLineFilter = "";
+            document.getElementById("nearby-filter-message").textContent = "";
+            renderNearbyStops(nearbyStopsCache);
         });
     }
 
